Unit 1: About Me Page
First take at Unit 1 Project

--- a/index.html
+++ b/index.html
@@ -1,3 +1,33 @@
-<h1>
-helloworld
-<\hi>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>About Emily</title>
+</head>
+
+<body>
+	<h1>About Emily</h1>
+
+	<p>I’m an Art Director, living in the great windy city of Chicago! I became interested in Front-End Web Design and Development because I’m looking to expand my design skills beyond traditional outputs and forge ahead (or catch-up) to incredible world of digital design. </p>
+
+	<h2>My Mission</h2>
+	<p>As I learn more about front-end, I hope to work as a digital art director who is capable in taking my clients marketing and advertising campaigns through the line, coming to life in both the physical and digital world!</p>
+
+	<h2>My Experience</h2>
+
+	<ul>
+		<li>Art Director, Walton Isaacson
+			Chicago, 2014 — present</li>
+		<li>Art Director, Legeacy Marketing Partners
+			Chicago, 2005 - 2014</li
+	</ul>
+
+	<h2>My Education</h2>
+
+	<ul>
+		<li>University of Michigan, Bachelor of Fine Arts
+			Emphasis in Graphic Design, Minor in Art History</li>
+	</ul>
+
+	<p>If you’re interested in collaborating with me on a project, feel free to email me at: <a href="mailto:emilybethschwartz@gmail.com">/A>.</p>
+</body>
+</html>
