Unit 2: Design Challenge

--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>About Emily</title>
+	<h1> Emily's Unit 2 Design Challenge</h1>
 </head>
-
 <body>
-	<h1>About Emily</h1>
+	<h2>Which two websites are you most inspired by?</h2>
+	<a>http://studiobeuro.com/</a>
+	<a>http://maaemo.no/</a>
+	<p>While I love parts of both of these sites, I'm most inspired by the use of dark mood photography/video on the Maaemo website and how it leads the viewers eyes through the site. As you scroll down and new visuals appear along with copy, it bounces around in a easy to follow yet intriguing pattern to keep the user engaged and focused. I also love the small detail of using part of the logo "AA" when transitioning to the other pages. The far right navigation bar also sets it apart from the standard left panel navigation. The Studio Beuro use of colors and grid system to define the space is also something I love. The center justified axis for the logo placement and main headline floating in a large negative space seems very unique and different compared to the normal placement of a logo in the top left/right corners of a page.</p>
 
-	<p>I’m an Art Director, living in the great windy city of Chicago! I became interested in Front-End Web Design and Development because I’m looking to expand my design skills beyond traditional outputs and forge ahead (or catch-up) to incredible world of digital design. </p>
+	<h2>How do they exhibit effective use of space, size or balance?</h2>
+	<p>They both effectively use the full space with a focus on photography and secondary focus on the adjacent copy. The size of the photography almost overwhelms the site, but once you roll over or click through the photography the messaging and content is displayed. The gride system is very apparent, both using two columns resulting in a very center focused balanced website. </p>
 
-	<h2>My Mission</h2>
-	<p>As I learn more about front-end, I hope to work as a digital art director who is capable in taking my clients marketing and advertising campaigns through the line, coming to life in both the physical and digital world!</p>
-
-	<h2>My Experience</h2>
-
+	<h2>What makes them similar and different?</h2>
+	<p>As mentioned about, their use of space and balance throught the grid system makes them similar. One of the most noticable differences is the use of color and style of photography. Immediatly is sets the mood for the website. Studio Beuro is very bright, using vibrant colors and photos with a lot of energy, texture and movement. Maaemo has a clean crisp white background, stark gray text with rich photography that is almost duotone in color — deep blues and rich grays. </p>
+	
+	<h2>Thumbnail sketches</h2>
 	<ul>
-		<li>Art Director, Walton Isaacson
-			Chicago, 2014 — present</li>
-		<li>Art Director, Legeacy Marketing Partners
-			Chicago, 2005 - 2014</li
-	</ul>
+		<li><strong>HOMEPAGE</strong>
+			<p>The homepage of this website will be similar to that of <a>http://studiobeuro.com/</a> with a two coloumn systyem divided by bold colors and photography. The Logo will be left align to the center axis with a large amount of negative space around it allowing it and the headline to be the focal point of the page.</p>
+			<img src = thumbnails1.jpg </img>
+			<li><strong>MENU BAR</strong>
+				<p>The menu bar will be hidden unless activated by clicking on the icon on the upper right corner. The Menu will then slide in from the right side of the page, shifting everything over to the left allowing the user to choose another page to jump to.</p>
+				<img src = thumbnails2.jpg </img>
+				<li><strong>CONTENT</strong>
+					<p>Heiracrchy of this page includes a headline, brief copy and then a stream of strong photography. Below the fold the photography continues to appear divided by background color blocks and brief captions. </p>
+					<img src = thumbnails3.jpg </img>
+						<li><strong>BELOW THE FOLD</strong>
+					<p>Extended photography layout.</p>
+					<img src = thumbnails4.jpg </img>
+				</ul>
 
-	<h2>My Education</h2>
 
-	<ul>
-		<li>University of Michigan, Bachelor of Fine Arts
-			Emphasis in Graphic Design, Minor in Art History</li>
-	</ul>
-
-	<p>If you’re interested in collaborating with me on a project, feel free to email me at: <a href="mailto:emilybethschwartz@gmail.com">/A>.</p>
 </body>
 </html>
