--- a/Taasky/index.html
+++ b/Taasky/index.html
@@ -7,12 +7,12 @@
 </head>
   
 <body>
-	<img src="assets/stripes.png"><br>
-	<img src="assets/logo-taasky.png" height=26>
+	<img src="Assets/stripes.png"><br>
+	<img src="Assets/logo-taasky.png" height=26>
  	<hr align="left">
   	<p>Beautiful, simple and easy to use task manager.</p>
  
-   <img src="assets/btn_store.png" padding=100px height=40">
+   <img src="Assets/btn_store.png" padding=100px height=40">
   </body>
   
 </html>
