--- a/Taasky/index.html
+++ b/Taasky/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE HTML>
 <html>
-
 <head>
 	<title>Taasky Homepage</title>
 	<link rel="stylesheet" href="style.css" />
 </head>
-  
 <body>
-	<img src="Assets/stripes.png"><br>
-	<img src="Assets/logo-taasky.png" height=26>
- 	<hr align="left">
-  	<p>Beautiful, simple and easy to use task manager.</p>
- 
-   <img src="Assets/btn_store.png" padding=100px height=40">
-  </body>
-  
+	<section>
+		<img src="Assets/logo-taasky.png">
+		<hr>
+	 	<p>Beautiful, simple and easy to use task manager.</p>
+	 	<img src="Assets/btn_store.png">
+	</section>
+</body>
 </html>
