--- a/Taasky/index.html
+++ b/Taasky/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 	<section>
-		<img src="Assets/logo-taasky.png">
+		<img src="Assets/logo-taasky.png" alt="Taasky logo">
 		<hr>
 	 	<p>Beautiful, simple and easy to use task manager.</p>
-	 	<img src="Assets/btn_store.png">
+	 	<a href="#"><img src="Assets/btn_store.png" alt="Link to Taasky app store page"></a>
 	</section>
 </body>
 </html>
