--- a/Restaurant/index.html
+++ b/Restaurant/index.html
@@ -11,7 +11,9 @@
 		<img src="assets/mle_lockup.png" alt="MLE Logo">
 		<h1>MLE Pizzeria + Wine Bar</h1>
 		<hr>
-	 	<p>MLE Pizzeria + Wine Bar is a neighborhood Italian influenced restaurant featuring specialty brick over pizzas, hearty pastas, and an extensive selection of wine. Get cozy in our leather banquets and lose track of time while you unwind with friends over amazing food and great wine. Buon appetito!</p>
+		<div>
+		 	<p>MLE Pizzeria + Wine Bar is a neighborhood Italian influenced restaurant featuring specialty brick over pizzas, hearty pastas, and an extensive selection of wine. Get cozy in our leather banquets and lose track of time while you unwind with friends over amazing food and great wine. Buon appetito!</p>
+		 </div>
 	 	<h2>BOOK A TABLE TODAY!</h2>
 	 	<a href="http://opentable.com/" target="_blank"><img src="assets/opentable.png" alt="Link to Opentable page"></a>
 	</section>
